# record_matcher

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
record_matcher/: config.py  matcher.py  records.py
tabular_matcher/: __init__.py  config.py  errors.py  matcher.py  records.py  tabular_matcher.py
tests/: test_config.py  test_matcher.py  test_records.py
